--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </main>
     <footer>
       <p>&copy; 
-        2024 Desenvolvido por Alura. 
+        2024 Desenvolvido por Davi. 
         Projeto fictício sem fins comerciais.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
